# Tetris

./: .gitignore  CMakeLists.txt  README.md
srs/: canvas.cpp  canvas.h  field.cpp  field.h  figures.h  main.cpp  numbers.h  panel.cpp  panel.h  pieces.cpp  pieces.h  setting.h  timer.cpp  timer.h  window.cpp  window.h
